# kana-rate

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: collect_show_rates.py  episode_to_csv.py  visualize_rates.py
src/jp_sub_speechrate/: cli.py  parsing.py  reading.py
src/kana_rate/: __init__.py  cli.py  parsing.py  reading.py
